force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>Represents a single country and grantmaking within that country.</description>
    <label>Country</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>