force-app/main/default/objects/Country__c/fields/Calling_code__c.field-meta.xml
<CustomField>
    <fullName>Calling_code__c</fullName>
    <description>International calling code</description>
    <inlineHelpText>International calling code</inlineHelpText>
    <label>Calling code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>