force-app/main/default/objects/Country__c/fields/Country_count__c.field-meta.xml
<CustomField>
    <fullName>Country_count__c</fullName>
    <description>&quot;Power of One&quot; counter of countries for reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>&quot;Power of One&quot; counter of countries for reports</inlineHelpText>
    <label>Country count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>