force-app/main/default/objects/Country__c/fields/Date_of_last_grant__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_grant__c</fullName>
    <description>The date on which the latest grant was awarded in this country</description>
    <inlineHelpText>The date on which the latest grant was awarded in this country</inlineHelpText>
    <label>Date of last grant</label>
    <type>Date</type>
</CustomField>