force-app/main/default/objects/Country__c/fields/ISO_code__c.field-meta.xml
<CustomField>
    <fullName>ISO_code__c</fullName>
    <description>Two character code according to ISO 3166-1-alpha-2</description>
    <inlineHelpText>Two character code according to ISO 3166-1-alpha-2</inlineHelpText>
    <label>ISO code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>