force-app/main/default/objects/Country__c/fields/Keep_confidential__c.field-meta.xml
<CustomField>
    <fullName>Keep_confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then all accounts/grants/proposals under this country are considered confidential, in particular, are masked by the grant search tool.</description>
    <inlineHelpText>If checked then all accounts/grants/proposals under this country are considered confidential, in particular, are masked by the grant search tool.</inlineHelpText>
    <label>Keep confidential</label>
    <type>Checkbox</type>
</CustomField>