force-app/main/default/objects/Country__c/fields/Num_grants__c.field-meta.xml
<CustomField>
    <fullName>Num_grants__c</fullName>
    <description>The number of grants awarded in this country</description>
    <inlineHelpText>The number of grants awarded in this country</inlineHelpText>
    <label>Num grants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>