force-app/main/default/objects/Country__c/fields/Num_profiles__c.field-meta.xml
<CustomField>
    <fullName>Num_profiles__c</fullName>
    <description>The number of profiles received from this country</description>
    <inlineHelpText>The number of profiles received from this country</inlineHelpText>
    <label>Num profiles</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>