force-app/main/default/objects/Country__c/fields/Num_proposals__c.field-meta.xml
<CustomField>
    <fullName>Num_proposals__c</fullName>
    <description>The number of proposals received from this country</description>
    <inlineHelpText>The number of proposals received from this country</inlineHelpText>
    <label>Num proposals</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>