force-app/main/default/objects/Country__c/fields/Political_context_risk_level__c.field-meta.xml
<CustomField>
    <fullName>Political_context_risk_level__c</fullName>
    <description>Regional teams assign the type and risk level at the country level, ratings are reviewed periodically. If medium or high, type required.</description>
    <inlineHelpText>Regional teams assign the type and risk level at the country level, ratings are reviewed periodically. If medium or high, type required.</inlineHelpText>
    <label>Political context risk level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High (2)</fullName>
            </value>
            <value>
                <fullName>Medium (1)</fullName>
            </value>
            <value>
                <fullName>Low (0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>