force-app/main/default/objects/Country__c/fields/Political_context_risk_type__c.field-meta.xml
<CustomField>
    <fullName>Political_context_risk_type__c</fullName>
    <description>Primary type of risk in this country</description>
    <inlineHelpText>Primary type of risk in this country</inlineHelpText>
    <label>Political context risk type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Political unrest</fullName>
            </value>
            <value>
                <fullName>Post conflict</fullName>
            </value>
            <value>
                <fullName>Govt restrictions on CSOs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>