force-app/main/default/objects/Country__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this country is a priority country for funding</description>
    <inlineHelpText>Checked if this country is a priority country for funding</inlineHelpText>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>