force-app/main/default/objects/Country__c/fields/Region_990__c.field-meta.xml
<CustomField>
    <fullName>Region_990__c</fullName>
    <description>Name of this country&apos;s region according to the official 990 geography</description>
    <inlineHelpText>Name of this country&apos;s region according to the official 990 geography</inlineHelpText>
    <label>Region 990</label>
    <length>255</length>
    <type>Text</type>
</CustomField>