force-app/main/default/objects/Country__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Enclosing region for this country</description>
    <inlineHelpText>Enclosing region for this country</inlineHelpText>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Countries</relationshipLabel>
    <relationshipName>Countries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>