force-app/main/default/objects/Country__c/fields/Total_awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_awarded__c</fullName>
    <description>The total amount in USD of grants awarded in this country</description>
    <inlineHelpText>The total amount in USD of grants awarded in this country</inlineHelpText>
    <label>Total awarded</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>