force-app/main/default/objects/Country__c/validationRules/Political_context_risk_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Political_context_risk_type</fullName>
    <active>true</active>
    <description>A value for risk type is required when risk level is high or medium.</description>
    <errorConditionFormula>AND(
 ISBLANK( TEXT(Political_context_risk_type__c) ),
 OR (
  CONTAINS ( TEXT(Political_context_risk_level__c), &quot;High&quot;),
  CONTAINS ( TEXT(Political_context_risk_level__c), &quot;Medium&quot;)
 )
)</errorConditionFormula>
    <errorDisplayField>Political_context_risk_type__c</errorDisplayField>
    <errorMessage>A value for risk type is required when risk level is high or medium.</errorMessage>
</ValidationRule>