force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Num_profiles__c</columns>
    <columns>Num_proposals__c</columns>
    <columns>Num_grants__c</columns>
    <columns>Total_awarded__c</columns>
    <columns>Date_of_first_grant__c</columns>
    <columns>Date_of_last_grant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>